# simpleCPPhttpserver

./: CMakeLists.txt  main.cpp
app/: MainServlet.hpp  Page2Servlet.hpp  Servlet404.h  StaticResourcesServlet.hpp
http/: Request.cpp  Request.h  RequestProcessor.h  Response.cpp  Response.h  Server.cpp  Server.h
servlet/: Servlet.cpp  Servlet.h  ServletContainer.cpp  ServletContainer.h
utils/: string.cpp  string.h
